# RWLensPy

./: .gitignore  LICENSE  README.md  build.py  pyproject.toml  setup.py
examples/: example_animate_multilens.py  example_animate_singlelens.py  example_transfer_multilens.py  example_transfer_singlelens.py
rwlenspy/: lensing.pxd  lensing.pyx  rwlens.cpp  rwlens.h  utils.py
tests/: plasmalenspredict.py  rwlens_3dtest.py  rwlens_crittest.py  rwlens_test.py  scatterlenspredict.py  test_rwlens.py
tests/examples/: example_animate_multilens.py  example_animate_singlelens.py  example_singlelens.py  example_transfer_multilens.py  example_transfer_singlelens.py
