[tool.poetry]
name = "rwlenspy"
version = "0.1.0"
description = "Lensing simulation from Fermat Potenials"
authors = ["Zarif Kader <kader.zarif@gmail.com>"]
readme = "README.md"

[tool.poetry.build]
script = "build.py"

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
numpy = "^1.24.1"
scipy = "^1.10.0"
cython = "^0.29.33"
astropy = "^5.2.1"
setuptools = "^66.1.1"

[build-system]
requires = ["poetry>=0.12",'numpy',"setuptools","cython"]
build-backend = "poetry.masonry.api"
