[tool.poetry]
name = "rwlenspy"
version = "0.1.0"
description = "Lensing simulation from Fermat Potenials"
authors = ["Zarif Kader <kader.zarif@gmail.com>"]
readme = "README.md"

[tool.poetry.build]
script = "build.py"

[tool.poetry.dependencies]
python = ">=3.8"
numpy = ">=1.21.0"
scipy = ">=1.7.0"
Cython = ">=0.29.33"
astropy = ">=4.3.0"
setuptools = ">=66.1.1"

[build-system]
requires = ["poetry>=0.12",'numpy',"setuptools","wheel","Cython"]
build-backend = "poetry.masonry.api"
