[tool.poetry]
name = "rwlenspy"
version = "1.1.2"
description = "Lensing simulation from Fermat Potenials"
authors = ["Zarif Kader <kader.zarif@gmail.com>"]
readme = "README.md"
include = [
    { path = "tests", format = "sdist" },
    { path = "examples/*.py", format = "sdist" }
]


[tool.poetry.build]
script = "build.py"
generate-setup-file = true

[tool.poetry.dependencies]
python = ">=3.9"
numpy = ">=1.21.0"
scipy = ">=1.7.0"
Cython = ">=0.29.33"
astropy = ">=6.0.0"
setuptools = ">=66.1.1"
matplotlib = ">=3.8.2"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = ">=7.4.4"
pytest-cython = ">=0.2.1"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
black = ">=23.12.1"
flake8 = ">=7.0.0"
isort = ">=5.13.2"
pytest = ">=7.4.4"
pytest-cython = ">=0.2.1"

[build-system]
requires = ["poetry-core",'numpy',"setuptools","wheel","Cython"]
build-backend = "poetry.core.masonry.api"
